# catly

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build_and_test.yml
src/: lib.rs  parser.rs
src/env/: builtin.rs  env_ref_src.rs  expr_env.rs  macro.rs  mod.rs  type_constraint.rs  type_env.rs
src/env/expr_env/: get_type_with_hint.rs  infer_type.rs  infer_type_with_hint.rs  mod.rs
src/env/type/: env_ref_src.rs  mod.rs  type_constraint.rs  type_env.rs
src/eval/: macro.rs  mod.rs
src/eval/case/: apply.rs  closure.rs  cond.rs  discard.rs  env_ref.rs  int.rs  let.rs  struct.rs  unit.rs
src/eval/env/: expr_env.rs  mod.rs  type_env.rs
src/eval/eval_expr/: mod.rs
src/eval/std/: bool.rs  builtin.rs  fraction.rs  mod.rs  (+1 more)
src/get_type/: fn.rs  macro.rs  mod.rs
src/infer/: infer_type_of_defs.rs  mod.rs
src/infer_type/: fn.rs  mod.rs
src/infra/: alias.rs  box.rs  btree_set.rs  either.rs  fn.rs  iter.rs  macro.rs  mod.rs  option.rs  quad.rs  rc.rs  result.rs  slice.rs  str.rs  triple.rs  vec.rs
src/lexer/: chunk.rs  keyword.rs  literal.rs  mod.rs  name.rs  remove_blank.rs
src/parser/: alphanum.rs  ast.rs  char.rs  define.rs  expr.rs  follow_pat.rs  infra.rs  keyword.rs  mark.rs  mod.rs  name.rs  preprocess.rs  type.rs
src/pp/: chunk.rs  comment.rs  const.rs  keyword.rs  merge_blank.rs  mod.rs  name.rs  remove_blank.rs  rm_comment.rs
src/type_checker/: get_type.rs  mod.rs  type.rs
src/unifier/: closure.rs  env_ref.rs  int.rs  mod.rs  partial_closure.rs  prod.rs  product.rs  sum.rs  unit.rs
src/unify/: closure.rs  mod.rs  prod.rs  sum.rs
(+389 files in other folders)
