[package]
name = "catly"
version = "0.1.0"
edition = "2021"

[features]
# default = ["unify_log", "infer_log", "env_log", "rt_log"]
lr1_log = []
pp_log = []
parser_log = []
infer_log = ["infer_log_min"]
infer_log_min = []
unify_log = []
env_log = ["ct_env_log", "rt_env_log"]
ct_env_log = []
rt_env_log = []
rt_log = ["rt_log_min"]
rt_log_min = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
