[package]
name = "catly"
version = "0.1.0"
edition = "2021"

[features]
# default = ["rt_env_log", "eval_log"]

pp_log = []

lexer_log = []

parser_lr1_log = []
parser_log = ["parser_lr1_log"]

infer_log_min = []
unify_log = []
infer_log = ["infer_log_min", "unify_log"]

ct_env_log = []
rt_env_log = []
env_log = ["ct_env_log", "rt_env_log"]

eval_log_min = []
eval_log = ["eval_log_min"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
